# cpp_camke_startup

./: CMakeLists.txt  README.md
cmake/: CpackConfig.cmake
include/example/: library.h
src/: library.cpp  main.cpp
